# rtk_mqtt

./: .gitignore  README.md  wifi_diagnosis_schemas.json
docs/: Enum_define.csv  Events.csv  SPEC.md  Struct_define.csv  arp_loss_diagnosis_sequence.puml  arp_loss_example.md  arp_loss_sequence_simple.puml  command_timeout_sequence.puml  connect_failure_example.md  connection_failure_diagnosis_sequence.puml  connection_failure_sequence_simple.puml  connection_recovery_sequence.puml  generic_sequence_simple.puml  mqtt_flow_diagrams.md  roaming_diagnosis_example.md  roaming_sequence.puml  roaming_sequence_simple.puml
docs/gen_word/: MQTT_Diag_通訊規格.docx  convert_svg.py  generate_graphviz_diagrams.py  generate_mqtt_spec_doc.py  generate_plantuml_sequences.py
iot_device/: HA_IOT_MCP.md  claude_control_flow.puml  ha_iot_mcp_architecture.puml  ha_ui_control_flow.puml
iot_device/gen_word/: generate_ha_iot_doc.py
mcphost_ces2026/: ARCHITECTURE.md  DEPLOYMENT.md  README.md
mcphost_ces2026/mcp_client/: config.json  go.mod  main.go
mcphost_ces2026/mcp_server/: config.json  go.mod  main.go  prompts.go  resources.go  server.go
mcphost_ces2026/test_script/: MCP_MODEL_REPORT.md  test_http_communication.sh  test_models.sh  test_tool_calling.sh
mcphost_ces2026/utils/: config.go  go.mod  homeassistant_mcp_client.go  llm_provider.go  llm_providers.go  mcp_client_registry.go  tool_aggregator.go  types.go
rtk_controller/: .gitignore  MANUAL.md  Makefile  README.md  SPEC.md  demo_cli.sh  go.mod  go.sum  release.sh
rtk_controller/configs/: complete_workflows.yaml  controller.yaml  intent_classification.yaml  mcp-server.yaml  workflows.yaml
rtk_controller/demo/: topology_demo.sh  topology_monitor.go
rtk_controller/discussion/: PLAN.md  PLAN_A.md  llm.md  overview.md  tools.md
rtk_controller/docs/: ARCH_CONTROLLER.puml  ARCH_DATA_FLOW.puml  ARCH_DEPLOYMENT.puml  ARCH_TEST.puml  ARCH_TOOLS.puml  DEV_DOC_PLAN.md  INTENTION_ACTIONS.md  LLM_ARCHITECTURE.md  MANUAL.md  README.md  TOPOLOGY_CLI_USAGE.md  TOPOLOGY_TESTING_DEPLOYMENT.md  topology_visualization.md  weak_signal_coverage_flow.puml
rtk_controller/scripts/: validate_payload_format.sh
rtk_controller/test/: integration_test.sh  load_topology.go  mqtt_broker_test.yaml  mqtt_topology_test.go  sample_topology.json  test_diagnostics.sh  test_qos.go  (+6 more)
rtk_mqtt_broker/: MANUAL.md  README.md  RELEASE.md  go.mod  go.sum  main.go
rtk_mqtt_framework/: CMakeLists.txt  PubSubClient_Integration_Summary.md  README.md  RELEASE.md  build_arm_minimal.sh  test_dependencies.c  test_minimal_build.c
rtk_mqtt_framework/cmake/: arm-none-eabi-toolchain.cmake  rtk-mqtt-framework-config.cmake.in
rtk_mqtt_framework/docs/: ARM_BUILD_INSTRUCTIONS.md  BUILD_SUMMARY.md  FreeRTOS_Network_Architecture.md  MANUAL.md
rtk_mqtt_framework/examples/: CMakeLists.txt  plugin_demo.c
rtk_mqtt_framework/examples/cpp_dll_demo/: CMakeLists.txt  README.md  main.cpp  rtk_mqtt_framework.h  smart_thermostat_plugin.c
rtk_mqtt_framework/examples/freertos_device/: network_example.c
rtk_mqtt_framework/examples/iot_sensor/: CMakeLists.txt  iot_sensor_config.json  iot_sensor_plugin.c
rtk_mqtt_framework/examples/smart_switch/: CMakeLists.txt  smart_switch_config.json  smart_switch_plugin.c
rtk_mqtt_framework/examples/user_templates/: README.md  test_examples.sh
rtk_mqtt_framework/examples/user_templates/01_hello_world/: README.md  config.json  main.c
rtk_mqtt_framework/examples/user_templates/02_basic_sensor/: README.md  config.json  sensor.c
rtk_mqtt_framework/examples/user_templates/03_complete_device/: README.md  config.json  device.c
rtk_mqtt_framework/examples/user_templates/04_cross_platform/: README.md  config.json  cross_platform_device.c
rtk_mqtt_framework/examples/wifi_router/: CMakeLists.txt  wifi_router_config.json  wifi_router_plugin.c
rtk_mqtt_framework/framework/: CMakeLists.txt  rtk_mqtt_framework.pc.in
rtk_mqtt_framework/framework-go/: CHANGELOG.md  CONTRIBUTING.md  README.md  go.mod  go.sum  test.sh
rtk_mqtt_framework/framework-go/cmd/rtk-dll/: build-simple.sh  build.sh  main.go  rtk_mqtt_framework.h
rtk_mqtt_framework/framework-go/cmd/rtk-dll-simple/: build-windows.sh  main.go  rtk_mqtt_framework_simple.h
rtk_mqtt_framework/framework-go/examples/framework_demo/: config.yaml  main.go
rtk_mqtt_framework/framework-go/examples/iot_sensor/: config.yaml  main.go
rtk_mqtt_framework/framework-go/examples/wifi_router/: config.yaml  main.go
rtk_mqtt_framework/framework-go/pkg/codec/: message.go  message_test.go  schema.go  validator.go
rtk_mqtt_framework/framework-go/pkg/config/: config.go
rtk_mqtt_framework/framework-go/pkg/device/: base.go  health.go  manager.go  manager_test.go  plugin.go
rtk_mqtt_framework/framework-go/pkg/mqtt/: client.go  client_test.go  paho.go  types.go
rtk_mqtt_framework/framework-go/pkg/topic/: builder.go  builder_test.go
rtk_mqtt_framework/framework/examples/freertos_device/: CMakeLists.txt  FreeRTOSConfig.h  main.c
rtk_mqtt_framework/framework/examples/windows_service/: CMakeLists.txt  install_service.bat.in  main.c  service_config.xml.in  uninstall_service.bat.in
rtk_mqtt_framework/framework/include/: Client.h  IPAddress.h  Stream.h  arduino_compat.h  rtk_device_plugin.h  rtk_json_config.h  rtk_message_codec.h  rtk_mqtt_client.h  rtk_network_interface.h  rtk_platform_compat.h  rtk_pubsub_adapter.h  rtk_schema_validator.h  rtk_topic_builder.h
rtk_mqtt_framework/framework/src/: freertos_compat.c  json_pool.c  message_codec.c  mqtt_client.c  network_freertos.c  plugin_manager.c  posix_compat.c  rtk_pubsub_adapter.c  rtk_pubsub_adapter_freertos.c  rtk_pubsub_adapter_windows.c  rtk_pubsub_cpp_wrapper.cpp  rtk_pubsub_cpp_wrapper.h  schema_validator.c  topic_builder.c  windows_compat.c
rtk_mqtt_framework/tools/: CMakeLists.txt
rtk_mqtt_framework/tools/mock_broker/: CMakeLists.txt  mock_mqtt_broker.c
rtk_mqtt_framework/tools/rtk_cli/: CMakeLists.txt  rtk_cli.c
rtk_simulation/: README.md  go.mod  go.sum  test_dhcp.go
rtk_wrapper/: demo_homeassistant.sh  demo_wrapper.sh  go.mod  go.sum
(+324 files in other folders)
